Corrections alignment homepage elements

--- a/sass/main.css
+++ b/sass/main.css
@@ -433,12 +433,13 @@ header {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   column-gap: 24px;
+  align-items: flex-end;
 }
 .details__content .img1 {
   grid-column: 1/4;
   position: relative;
 }
-.details__content .img1 img::after {
+.details__content .img1 img::before {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -446,7 +447,6 @@ header {
   left: 0;
   background-color: #F16718;
   opacity: 1;
-  z-index: 2;
 }
 .details__content .img2 {
   grid-column: 4/9;
@@ -458,6 +458,7 @@ header {
 }
 .details__content .txt {
   grid-column: 10/-1;
+  align-self: center;
 }
 .details__square {
   grid-column: 1/2;
