--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -68,11 +68,12 @@ header{
         display: grid;
         grid-template-columns: repeat(12, 1fr);
         column-gap: $gap; 
+        align-items: flex-end;
         .img1 {
             grid-column: 1 / 4;
             position: relative;
             img{
-                &::after{
+                &::before{
                     position: absolute;
                     width: 100%;
                     height: 100%;
@@ -80,7 +81,6 @@ header{
                     left: 0;
                     background-color: $primary-color;
                     opacity: 1;
-                    z-index: 2;
                 }
             }
             
@@ -96,6 +96,7 @@ header{
         }
         .txt{
             grid-column: 10 / -1;
+            align-self: center;
         }
     }
     &__square{
